--- a/style.css
+++ b/style.css
@@ -9,5 +9,27 @@ a {
 a:hover {
     color: lime;
     text-decoration: none;
-} 
+}
+
+body {
+    background-color: maroon;
+
+}
     
+h1 {
+    text-align: center;
+}
+
+img {
+  margin: 30px;
+  width: 300px;
+  border:  5px solid black;
+  border-radius: 20px;
+ transition: 1s;
+}
+
+img:hover {
+
+    transform: scale(1.3);
+      
+}
